[tool.poetry]
name = "immuni-ci-scheduler"
version = "0.1.0"
description = "A scheduler that verifies the quality and safety of PRs of the Immuni project."
authors = []

[tool.poetry.dependencies]
python = "^3.8"

gitpython = "~=3.1.2"
importlib-metadata = "~=1.6.0"
markdown-strings = "~=3.3.0"
pygithub = "~=1.51"
python-decouple = "~=3.3"
requests = "~=2.23"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
mypy = "^0.800"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
